--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,18 +2,17 @@
   <div class="col-md-8"><%= image_tag("article_image.jpg") %></div>
   <div class="col-md-4 vcenter-item">
     <div class="image-text-wrapper shadow-lg tab-user-info ">
-      <div class="p-3 col text-left ">
-        <span class="text-secondary py-3">Published / <%=
-              # @article.created_at.strftime("%d.%m.%Y")
-        %></span><br/>
-        <span class="text-danger py-3"><%=
+      <div class="p-3 d-flex flex-column text-left">
+        <span class="image-text__date py-1">Published / 20.01.2022 <%=
+
+        %></span>
+        <span class="image-text__title py-1">London Games return in 2022<%=
               # @article.alt
-        %></span><br/>
-        <span class="text-dark"><%=
+        %></span>
+        <span class="image-text__caption">Register to receive the latest news on ticket sales for the four NFL London Games in 2022!<%=
               # @article.title
         %></span>
-        <br/>
-        <br/>
+
       </div>
       <div>
         <button type="button" class="btn btn-danger btn-danger-not-rounded">More</button>
@@ -22,18 +21,187 @@
   </div>
 </div>
 <div class="col-md-9 py-3">
-  <%#= @article.content.html_safe%>
-  <%# @articles.each do |article| %>
-    <div class="card flex-md-row shadow h-md-250 border-0 my-3">
-      <%= image_tag("article_image.jpg", {style:"min-width: 280px; height: 180px;",class: "card-img-right flex-auto d-none d-md-block p-2"} ) %>
-      <div class="card-body d-flex flex-column align-items-start">
-        <h3 class="mb-0">
-          <%#= link_to article.title, article, class:"d-inline-block mb-2 clickable-block" %> Title
-        </h3>
-        <p class="card-text mb-auto">
-          <%#= article.caption %> Caption
-        </p>
+  <div class="row">
+    <div class="on-hover-shadow col d-flex flex-column border-0 my-3">
+      <%= image_tag("article_image.jpg", {style:"min-width: 180px; height: 130px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+      <div>
+        <span class="py-2 font-weight-bold clickable-block">
+          <%= link_to 'Raiders release', root_path, class:"d-inline-block mb-2 clickable-block" %>
+        </span>
+        <span class="card-text mb-auto text-muted">
+          After a five-year stint with the Oakland Raiders
+        </span>
       </div>
     </div>
-  <%# end %>
+    <div class="on-hover-shadow col d-flex flex-column border-0 my-3">
+      <%= image_tag("article_image.jpg", {style:"min-width: 180px; height: 130px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+      <div>
+        <span class="py-2 font-weight-bold clickable-block">
+          <%= link_to 'Raiders release', root_path, class:"d-inline-block mb-2 clickable-block" %>
+        </span>
+        <span class="card-text mb-auto text-muted">
+          After a five-year stint with the Oakland Raiders
+        </span>
+      </div>
+    </div>
+    <div class="on-hover-shadow col d-flex flex-column border-0 my-3">
+      <%= image_tag("article_image.jpg", {style:"min-width: 180px; height: 130px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+      <div>
+        <span class="py-2 font-weight-bold clickable-block">
+          <%= link_to 'Raiders release', root_path, class:"d-inline-block mb-2 clickable-block" %>
+        </span>
+        <span class="card-text mb-auto text-muted">
+          After a five-year stint with the Oakland Raiders
+        </span>
+      </div>
+    </div>
+    <div class="on-hover-shadow col d-flex flex-column border-0 my-3">
+      <%= image_tag("article_image.jpg", {style:"min-width: 180px; height: 130px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+      <div>
+        <span class="py-2 font-weight-bold clickable-block">
+          <%= link_to 'Raiders release', root_path, class:"d-inline-block mb-2 clickable-block" %>
+        </span>
+        <span class="card-text mb-auto text-muted">
+          After a five-year stint with the Oakland Raiders
+        </span>
+      </div>
+    </div>
+  </div>
+  <div class="row border-top my-5">
+    <div class="breakdown border text-center"><p class="text-uppercase">breakdown</p></div>
+    <div class="row breackdown-element my-3">
+      <div class="col-md-6">
+        <div class="on-hover-shadow d-flex flex-column border rounded-0" style="max-height:300px">
+          <%= image_tag("article_image.jpg", {style:"min-width: 390px; height: 200px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+          <div>
+        <span class="p-3 font-weight-bold clickable-block">
+          <%= link_to 'Lorem ipsum dolor sit amet, consectetur', root_path, class:"d-inline-block mb-2 clickable-block image-text__caption" %>
+        </span>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="on-hover-shadow card flex-md-row border rounded-0">
+          <%= image_tag("article_image.jpg", {style:"min-width: 150px; height: 98px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+          <div class="card-body d-flex flex-column align-items-start">
+            <h3 class="mb-0"><%= link_to 'Lorem ipsum', root_path, class:"d-inline-block mb-2 clickable-block" %></h3>
+            <p class="card-text mb-auto text-limited">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid assumenda cumque enim eos ex, excepturi laudantium magnam nobis nostrum quas quia quisquam ratione recusandae reiciendis repudiandae rerum sed. Dolore?</p>
+          </div>
+        </div>
+        <div class="on-hover-shadow card flex-md-row border rounded-0">
+          <%= image_tag("article_image.jpg", {style:"min-width: 150px; height: 98px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+          <div class="card-body d-flex flex-column align-items-start">
+            <h3 class="mb-0"><%= link_to 'Lorem ipsum', root_path, class:"d-inline-block mb-2 clickable-block" %></h3>
+            <p class="card-text mb-auto text-limited">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid assumenda cumque enim eos ex, excepturi laudantium magnam nobis nostrum quas quia quisquam ratione recusandae reiciendis repudiandae rerum sed. Dolore?</p>
+          </div>
+        </div>
+        <div class="on-hover-shadow card flex-md-row border rounded-0">
+          <%= image_tag("article_image.jpg", {style:"min-width: 150px; height: 98px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+          <div class="card-body d-flex flex-column align-items-start">
+            <h3 class="mb-0"><%= link_to 'Lorem ipsum', root_path, class:"d-inline-block mb-2 clickable-block" %></h3>
+            <p class="card-text mb-auto text-limited">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid assumenda cumque enim eos ex, excepturi laudantium magnam nobis nostrum quas quia quisquam ratione recusandae reiciendis repudiandae rerum sed. Dolore?</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row breackdown-element my-3">
+      <div class="col-md-6">
+        <div class="on-hover-shadow d-flex flex-column border rounded-0" style="max-height:300px">
+          <%= image_tag("article_image.jpg", {style:"min-width: 390px; height: 200px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+          <div>
+        <span class="p-3 font-weight-bold clickable-block">
+          <%= link_to 'Lorem ipsum dolor sit amet, consectetur', root_path, class:"d-inline-block mb-2 clickable-block image-text__caption" %>
+        </span>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="on-hover-shadow card flex-md-row border rounded-0">
+          <%= image_tag("article_image.jpg", {style:"min-width: 150px; height: 98px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+          <div class="card-body d-flex flex-column align-items-start">
+            <h3 class="mb-0"><%= link_to 'Lorem ipsum', root_path, class:"d-inline-block mb-2 clickable-block" %></h3>
+            <p class="card-text mb-auto text-limited">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid assumenda cumque enim eos ex, excepturi laudantium magnam nobis nostrum quas quia quisquam ratione recusandae reiciendis repudiandae rerum sed. Dolore?</p>
+          </div>
+        </div>
+        <div class="on-hover-shadow card flex-md-row border rounded-0">
+          <%= image_tag("article_image.jpg", {style:"min-width: 150px; height: 98px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+          <div class="card-body d-flex flex-column align-items-start">
+            <h3 class="mb-0"><%= link_to 'Lorem ipsum', root_path, class:"d-inline-block mb-2 clickable-block" %></h3>
+            <p class="card-text mb-auto text-limited">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid assumenda cumque enim eos ex, excepturi laudantium magnam nobis nostrum quas quia quisquam ratione recusandae reiciendis repudiandae rerum sed. Dolore?</p>
+          </div>
+        </div>
+        <div class="on-hover-shadow card flex-md-row border rounded-0">
+          <%= image_tag("article_image.jpg", {style:"min-width: 150px; height: 98px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+          <div class="card-body d-flex flex-column align-items-start">
+            <h3 class="mb-0"><%= link_to 'Lorem ipsum', root_path, class:"d-inline-block mb-2 clickable-block" %></h3>
+            <p class="card-text mb-auto text-limited">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid assumenda cumque enim eos ex, excepturi laudantium magnam nobis nostrum quas quia quisquam ratione recusandae reiciendis repudiandae rerum sed. Dolore?</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container border-top">
+    <div class="breakdown border text-center"><p class="text-uppercase">Photo of the day</p></div>
+    <div class="row">
+      <div class="triangle-right">
+      </div>
+      <div class="triangle-text-wrapper">
+        <p class="triangle-text__bold">Photo</p>
+        <p class="triangle-text__normal">of the</p>
+        <p class="triangle-text__bold">day</p>
+      </div>
+      <%= image_tag "article_image.jpg", class:'photo-of-the-day' %>
+    </div>
+  </div>
+  <div class="row breackdown-element my-3">
+    <div class="col-md-6">
+      <p class="text-uppercase most-article">Most popular</p>
+      <div class="on-hover-shadow card flex-md-row border rounded-0">
+        <%= image_tag("article_image.jpg", {style:"min-width: 150px; height: 98px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+        <div class="card-body d-flex flex-column align-items-start">
+          <h3 class="mb-0"><%= link_to 'Lorem ipsum', root_path, class:"d-inline-block mb-2 clickable-block" %></h3>
+          <p class="card-text mb-auto text-limited">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid assumenda cumque enim eos ex, excepturi laudantium magnam nobis nostrum quas quia quisquam ratione recusandae reiciendis repudiandae rerum sed. Dolore?</p>
+        </div>
+      </div>
+      <div class="on-hover-shadow card flex-md-row border rounded-0">
+        <%= image_tag("article_image.jpg", {style:"min-width: 150px; height: 98px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+        <div class="card-body d-flex flex-column align-items-start">
+          <h3 class="mb-0"><%= link_to 'Lorem ipsum', root_path, class:"d-inline-block mb-2 clickable-block" %></h3>
+          <p class="card-text mb-auto text-limited">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid assumenda cumque enim eos ex, excepturi laudantium magnam nobis nostrum quas quia quisquam ratione recusandae reiciendis repudiandae rerum sed. Dolore?</p>
+        </div>
+      </div>
+      <div class="on-hover-shadow card flex-md-row border rounded-0">
+        <%= image_tag("article_image.jpg", {style:"min-width: 150px; height: 98px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+        <div class="card-body d-flex flex-column align-items-start">
+          <h3 class="mb-0"><%= link_to 'Lorem ipsum', root_path, class:"d-inline-block mb-2 clickable-block" %></h3>
+          <p class="card-text mb-auto text-limited">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid assumenda cumque enim eos ex, excepturi laudantium magnam nobis nostrum quas quia quisquam ratione recusandae reiciendis repudiandae rerum sed. Dolore?</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <p class="text-uppercase most-article">Most Commented</p>
+      <div class="on-hover-shadow card flex-md-row border rounded-0">
+        <%= image_tag("article_image.jpg", {style:"min-width: 150px; height: 98px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+        <div class="card-body d-flex flex-column align-items-start">
+          <h3 class="mb-0"><%= link_to 'Lorem ipsum', root_path, class:"d-inline-block mb-2 clickable-block" %></h3>
+          <p class="card-text mb-auto text-limited">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid assumenda cumque enim eos ex, excepturi laudantium magnam nobis nostrum quas quia quisquam ratione recusandae reiciendis repudiandae rerum sed. Dolore?</p>
+        </div>
+      </div>
+      <div class="on-hover-shadow card flex-md-row border rounded-0">
+        <%= image_tag("article_image.jpg", {style:"min-width: 150px; height: 98px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+        <div class="card-body d-flex flex-column align-items-start">
+          <h3 class="mb-0"><%= link_to 'Lorem ipsum', root_path, class:"d-inline-block mb-2 clickable-block" %></h3>
+          <p class="card-text mb-auto text-limited">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid assumenda cumque enim eos ex, excepturi laudantium magnam nobis nostrum quas quia quisquam ratione recusandae reiciendis repudiandae rerum sed. Dolore?</p>
+        </div>
+      </div>
+      <div class="on-hover-shadow card flex-md-row border rounded-0">
+        <%= image_tag("article_image.jpg", {style:"min-width: 150px; height: 98px;",class: "card-img-right flex-auto d-none d-md-block p-1"} ) %>
+        <div class="card-body d-flex flex-column align-items-start">
+          <h3 class="mb-0"><%= link_to 'Lorem ipsum', root_path, class:"d-inline-block mb-2 clickable-block" %></h3>
+          <p class="card-text mb-auto text-limited">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid assumenda cumque enim eos ex, excepturi laudantium magnam nobis nostrum quas quia quisquam ratione recusandae reiciendis repudiandae rerum sed. Dolore?</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
