--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -172,6 +172,17 @@ img .social-icon-wrapper {
     height: 15px;
 }
 
+.social-icon__youtube {
+    padding: 0 10px 0 10px;
+    width: 37px;
+    height: 15px;
+}
+.social-icon__twitter {
+    padding: 0 10px 0 10px;
+    width: 37px;
+    height: 15px;
+}
+
 .login-container {
     border-bottom: 1px solid #8080801a;
 
@@ -518,4 +529,10 @@ form.search-form {
     font-weight: bold;
     font-size: 14px;
     line-height: 19px;
+}
+.nav-social{
+    max-width:90px;
+}
+.nav-social__item{
+    max-width:50px;
 }
