--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -41,7 +41,7 @@
   </div>
   <div class="form-group">
     <%= form.label :category_id, class: "text-uppercase py-2"  %>
-    <%= form.select :category_id, options_from_collection_for_select(@categories, "id", "title"), :include_blank => true, class: "form-control" %>
+    <%= form.select :category_id, options_from_collection_for_select(@categories, "id", "title", :selected => @article.category_id), :include_blank => true, class: "form-control" %>
   </div>
 
   <div class="actions py-3">
