--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,20 +1,20 @@
 <%= render "shared/breadcrumbs" %>
+<p id="notice"><%= notice %></p>
 <div class=" w-75 d-flex image-section">
   <div class="col-md-8"><%= image_tag("article_image.jpg") %></div>
   <div class="col-md-4 vcenter-item">
     <div class="image-text-wrapper shadow-lg tab-user-info ">
-      <div class="p-3 col text-left ">
-        <span class="text-secondary py-3">Published / <%=
-          # @article.created_at.strftime("%d.%m.%Y")
-        %></span><br/>
-        <span class="text-danger py-3"><%=
+      <div class="p-3 d-flex flex-column text-left">
+        <span class="image-text__date py-1">Published / 20.01.2022 <%=
+
+        %></span>
+        <span class="image-text__title py-1">London Games return in 2022<%=
           # @article.alt
-        %></span><br/>
-        <span class="text-dark"><%=
+        %></span>
+        <span class="image-text__caption">Register to receive the latest news on ticket sales for the four NFL London Games in 2022!<%=
           # @article.title
         %></span>
-        <br/>
-        <br/>
+
       </div>
       <div>
         <button type="button" class="btn btn-danger btn-danger-not-rounded">More</button>
@@ -36,8 +36,5 @@
 
 </div>
 
-<p id="notice"><%= notice %></p>
-<h1>Articles</h1>
-<br>
-<%= link_to 'New Article', new_article_path %>
+
 
