--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,16 @@
   <%= yield(:content) %>
 <% else %>
   <%= render partial: 'shared/header' %>
-  <%= render partial: 'shared/sidebar' %>
+  <div class="container-fluid">
+    <div class="row">
+      <%= render partial: 'shared/sidebar' %>
+      <div class="center-block col-md-9">
+        <p class=""><%= notice %></p>
+        <p class=""><%= alert %></p>
+        <%= yield %>
+      </div>
+    </div>
+  </div>
   <%= render partial: 'shared/footer' %>
 <% end %>
 </body>
