Home page admin functionality
Created admin/categories controller
Added js repeater for fields
Add ajax to choose subcategory by category

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -536,3 +536,8 @@ form.search-form {
 .nav-social__item{
     max-width:50px;
 }
+
+.add-button-repeater{
+    position: absolute;
+    padding-left: 100px;
+}
