Change layout view on edit user page

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,7 +6,11 @@
       <div class="form-group">
         <%= form_for @user, url: user_path(@user), action: :update, method: :put do |f| %>
           <div class="form-group">
-              <%=  image_tag user_avatar(@user), class:'mx-auto d-block p-2', style:"width:120px; display:block; border-radius: 60px;"%>
+            <% if @user.avatar.attached? %>
+              <%= image_tag user_avatar(@user), class: 'mx-auto d-block p-2', style: "width:120px; display:block; border-radius: 60px;" %>
+            <% else %>
+              <%= image_tag 'default-avatar.png', class: 'mx-auto d-block p-2', style: "width:120px; display:block; border-radius: 60px;" %>
+            <% end %>
             <%= f.file_field :avatar, class: "form-control" %>
 
           </div>
