Send mail with delay from Active mailer with sidekiq

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,9 +3,7 @@
   <div class="col-md-4 vcenter-item">
     <div class="image-text-wrapper shadow-lg tab-user-info ">
       <div class="p-3 d-flex flex-column text-left">
-        <span class="image-text__date py-1">Published / 20.01.2022 <%=
-
-        %></span>
+        <span class="image-text__date py-1">Published / 20.01.2022 </span>
         <span class="image-text__title py-1">London Games return in 2022<%=
               # @article.alt
         %></span>
