--- a/app/views/shared/_pagination.html.erb
+++ b/app/views/shared/_pagination.html.erb
@@ -2,11 +2,9 @@
   <nav aria-label="Page navigation example">
     <ul class="pagination">
       <li class="page-item">
-        <%= link_to 'Previous', articles_path(page: @articles_page - 1), class: "page-link #{ @articles_page == 0 ? 'disabled' : '' }" %>
+        <%= link_to 'Previous', articles_path(page: @articles_page - 1), class: "page-link #{ @articles_page == 0 ? 'btn disabled' : '' }" %>
       </li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item px-3">|</li>
       <li class="page-item">
         <%= link_to 'Next', articles_path(page: @articles_page + 1), class: "page-link" %>
       </li>
